# ISU-GeoGuesser

./: .gitignore  .gitmodules  CMakeLists.txt  DB.cpp  DB.hpp  PRODUCT.md  README.md  backend_build.sh  frontend_build.sh  index.html  leaderboard.html  main.cpp  reggieguessr.go  styles.css  uniguessr.db
.cache/clangd/index/: main.cpp.05CA6EA84965BD10.idx
backend/: auth.go  config.go  games.go  games_logic.go  games_test.go  go.mod  go.sum  leaderboard.go  location.go  locations.go  main.go  reggieguessr.go  scoring.go  scoring_test.go  session.go  utils.go  websocket.go  websocket_test.go
backend/auth/: auth.go  session.go  utils.go
backend/config/: config.go
backend/database/: database.go
backend/games/: games.go  games_logic.go  games_test.go
backend/utils/: utils.go
backend/websocket/: websocket.go
docs/leaderboard/: index.html
frontend/: go.mod  main.go
game/: game.css  game.js  index.html
home/: index.html  styles.css
loginsignup/: index.html  style.css
public/: index.html
public/home/: index.html
